--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ line-height: 19px;
 color: #31456A;
 
 }
-@media(min-width: 414px){
+@media(max-width: 413px){
     .nav {
         display: flex;
         justify-content: space-around;
